src/test/deca/context/invalid/sansObjet/opBoolType.deca
// Description :
//    Opération booléenne invalide : opérande non-boolean pour '&&'.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : L'opérateur logique ne s'applique qu'aux booléens.

{
    print(1 && true);
}